# windseeker

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY_NOTES.md  cli.py  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml  publish.yml
.github/badges/: docstrings.json
.github/workflows/: ci.yml  docstring-badge.yml  publish.yml  release.yml  security-audit.yml
tests/: test_cli.py  test_graph_unresolved_imports.py  test_import_graph.py  test_notebook_build.py  test_notebook_execute_issues.py  test_package_extraction.py  test_parsing_views.py  test_pipeline_branches.py  test_scan_folder.py  test_topological_order.py  test_unresolved_imports.py  test_views_extract.py  test_views_extract_png.py  test_views_extraction.py  test_visualize.py
tests/Basic Tests/: a.sysml  b.sysml  c.sysml  d.sysml  e.sysml  f.sysml
tests/Cloud/: system.sysml
tests/SysML Flashlight/: flashlite.sysml
windseeker/: __init__.py  cli.py  errors.py  graph.py  main.py  parsing.py  pipeline.py  scan.py  visualize.py
windseeker/notebook/: build.py  execute.py
windseeker/views/: extract.py  render.py
