[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windseeker"
version = "0.1.0"
description = "SysML v2 dependency analysis, notebook generation, execution, and view extraction tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Windseeker Contributors" }
]

dependencies = [
  "networkx>=3.2",
  "matplotlib>=3.8",
  "nbformat>=5.9",
  "nbclient>=0.9",
  "jupyter>=1.0",
  "cairosvg>=2.7",
  "pillow>=10.0",
  "typer>=0.12",
  "rich>=13.7",
  "lxml>=5.0"
]

[project.scripts]
windseeker = "cli:main"

[tool.setuptools]
py-modules = ["main", "cli"]
